16th July 2013

- updated start_client and epname.ini to introduce a new tag EP_HOST to allow
  the user the specify on what machine is allowed to start an EP. The user
  can specify hostname or IP address. If this tag is not set, the EP is allowed
  to be started by edfault
- added option to start the client in "silent" mode; no messages are printed
- updated GUI for some minor fixes:
             - labels resize
             - reconfigured warnings
             - changed uppercase project name
             - http server port removed
             - tc name field resized
- updated User Guide

INFO: the applet and client side were updated; so they have to be reinstalled			 

15th July 2013

- fix for start_client to avoind binding to localhost ( it will reject connections
  from remote hosts )
- fix for cli.py --users to discover the NIS users that have the Twister client
   installed
- removed the option "status" for cli.py
- updated user guide document.

12th July 2013

- added fix for issue #26 ( server must be restarted to reflect the changes on epname.ini ).
  With this fix, the newly added EP is get immediately available for cli usage. The GUI has to
  be refreshed to get the new EP. No need to restart the server.
- code rework for installer to install separately the dependencies. Now, there are 3 options for installer.
  Install dependencies ( requires root access ), install server, install client. Issue #12 is covered
  with this fix.
- added a GUI fix to allow export/import of a solely suite
- fix for issue #23 ( Save button is shown instead of Open button in pre/post execution open file dialog )
- fix for issue #29 ( Clear log button should reconfirm from the user whether the logs should be erased ).
  A confirmation window is presented.
- added Build Date filed for applet in About window.  
- updated the user guide document
- INFO: the applet, server and clients were updated, so all of them have to be re-installad

11th July 2013
